<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">屏蔽管家</string>
    <string name="title_section1">Section</string>
    <string name="action_settings">Settings</string>
    
    <string name="start_block">开始屏蔽应用</string>
    <string name="stop_block">设置屏蔽列表</string>
    
    <string name="common_warning_0">PLEASE</string>
    <string name="common_warning_1">KEEP</string>
    <string name="common_warning_2">CALM</string>
    <string name="common_warning_3">AND"</string>
    <string name="common_warning_4">GO BACK TO</string>
    <string name="common_warning_5">WORK</string>
    
</resources>
